--- a/HTML/Módulos.html
+++ b/HTML/Módulos.html
@@ -29,6 +29,18 @@
       <div class="module-title">Ventas</div>
       <a href="Ventas.html"><button class="module-button">Ver Ventas</button></a>
     </div>
+
+    <div class="module">
+      <img src="../IMAGES/Contabilidad.jpg" alt="Ventas">
+      <div class="module-title">Contabilidad</div>
+      <a href="contabilidad.html"><button class="module-button">Ver Contabilidad</button></a>
+    </div>
+
+    <div class="module">
+      <img src="../IMAGES/inventario.png" alt="Ventas">
+      <div class="module-title">inventario</div>
+      <a href="inventrio.html"><button class="module-button">Gestionar inventario</button></a>
+    </div>
   </div>
 
   <!-- Botón de Cerrar Sesión -->
